adding some goal notes

--- a/blossom/myapp/templates/book_details.html
+++ b/blossom/myapp/templates/book_details.html
@@ -1,2 +1,6 @@
-<p>Book: {{ book.title}} </p>
-<p>Published on: {{ book.pub_date}} </p>
+<p>Book: {{ book.title}}</p>
+<p>Published on: {{ book.pub_date}}</p>
+
+<!-- Not sure how much I can do a regular thing. Also, is jinja being used or is it something else?
+
+I really want to use django for more. I shall. Soon enough. -->
