three ish pages that connect to each other

--- a/blossom/myapp/templates/plants.html
+++ b/blossom/myapp/templates/plants.html
@@ -7,8 +7,8 @@
     <title>blossom</title>
   </head>
   <body>
-    This is Blossom
+    <p>This is Blossom</p>
     <p>This is a website for Jess</p>
-    <a href="http://127.0.0.1:8000/app/book/1">This should be a book</a>
+    <a href="http://127.0.0.1:8000/book/1">This should be a book</a>
   </body>
 </html>
