--- a/blossom/myapp/templates/plants.html
+++ b/blossom/myapp/templates/plants.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>blossom</title>
-  </head>
-  <body>
-    <p>This is Blossom</p>
-    <p>This is a website for Jess</p>
-    <a href="http://127.0.0.1:8000/book/1">This should be a book</a>
-  </body>
-</html>
+{% extends 'base.html' %} {% block content %}
+
+<p>This is not the header This is for making plants</p>
+
+<p>This is Blossom</p>
+<p>This is a website for Jess</p>
+<a href="http://127.0.0.1:8000/book/1">This should be a book</a>
+
+{% endblock %}
