got a logo and connected everything together

--- a/blossom/myapp/templates/new_plant.html
+++ b/blossom/myapp/templates/new_plant.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %} {% block content %}
 
-<p>This is not the header This is for making plants</p>
-
-
+<p>This is for making plants</p>
 
 <form action=""></form>
+
+<a href="http://127.0.0.1:8000/book/1">This should be a book</a>
+
 {% endblock %}
