--- a/blossom/myapp/templates/plants.html
+++ b/blossom/myapp/templates/plants.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %} {% block content %}
 
-<p>This is not the header This is for making plants</p>
-
 <p>This is Blossom</p>
 <p>This is a website for Jess</p>
 <a href="http://127.0.0.1:8000/book/1">This should be a book</a>
+
+<a href="http://127.0.0.1:8000/create">This should be the creation</a>
 
 {% endblock %}
