--- a/blossom/myapp/templates/base.html
+++ b/blossom/myapp/templates/base.html
@@ -17,13 +17,14 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="#" style="padding: 10px"
         ><img
-          src="/static/delta.png"
+          src="/static/images.png"
           width="30"
           height="30"
           padding="10"
           class="d-inline-block align-top"
           alt="picture"
-        /> Blossom</a
+        />
+        Blossom</a
       >
     </nav>
     {% block content %} {% endblock %}
