started putting together some forms

--- a/blossom/myapp/templates/base.html
+++ b/blossom/myapp/templates/base.html
@@ -27,7 +27,7 @@
         Blossom</a
       >
     </nav>
-    {% block content %} {% endblock %}
+    <div style="padding: 10px">{% block content %} {% endblock %}</div>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
