clean start to the day

--- a/blossom/myapp/templates/new_plant.html
+++ b/blossom/myapp/templates/new_plant.html
@@ -8,6 +8,16 @@
 </form> -->
 
 <form action="/your-name/" method="post" style="padding: 2px">
+  <label for="plant_name">Plant name: </label>
+  <br />
+  <input
+    id="your_name"
+    type="text"
+    name="your_name"
+    value="{{ current_name }}"
+    style="margin: 2px"
+  />
+  <br />
   <label for="your_name">Your name: </label>
   <br />
   <input
@@ -18,13 +28,7 @@
     style="margin: 2px"
   />
   <br />
-  <input
-    id="your_name"
-    type="text"
-    name="your_name"
-    value="{{ current_name }}"
-    style="margin: 2px"
-  />
+  <label for="your_name">Your name: </label>
   <br />
   <input
     id="your_name"
@@ -33,6 +37,8 @@
     value="{{ current_name }}"
     style="margin: 2px"
   /><br />
+  <label for="your_name">Your name: </label>
+  <br />
   <input
     id="your_name"
     type="text"
