--- a/blossom/myapp/templates/plants.html
+++ b/blossom/myapp/templates/plants.html
@@ -6,4 +6,21 @@
 
 <a href="http://127.0.0.1:8000/create">This should be the creation</a>
 
+<p>{{ plant.name }}</p>
+
+{% for x in plants %}
+<p>{{ x.name }}</p>
+<p>{{ x.type }}</p>
+<p>Water amount: {{ x.water_ammount }}</p>
+<p>{{ x.description }}</p>
+<p>----------------------</p>
+
+{% endfor %}
+
+<img
+  src="https://drive.google.com/file/d/1CSaZC1d_JUXprITJRhTnbWPCeM16KWEO/view?usp=sharing"
+  alt="plant"
+/>
+<br />
+
 {% endblock %}
