--- a/blossom/myapp/templates/book_details.html
+++ b/blossom/myapp/templates/book_details.html
@@ -1,7 +1,1 @@
-{% extends 'base.html' %} {% block content %}
-
-<p>Book: {{ book.title}}</p>
-<p>Published on: {{ book.pub_date}}</p>
-<a href="http://127.0.0.1:8000/plants">This should be the plants</a>
-
-{% endblock %}
+{% extends 'base.html' %} {% block content %} {% endblock %}
