form mostly complete

--- a/blossom/myapp/templates/new_plant.html
+++ b/blossom/myapp/templates/new_plant.html
@@ -8,7 +8,7 @@
   class="col-xs-1 text-center"
   style="display: flex; justify-content: center"
 >
-  <div
+  <!-- <div
     class="card"
     style="width: 500px; padding: 10px; display: flex; justify-content: left"
   >
@@ -98,16 +98,16 @@
       />
       <input type="submit" value="Submit" />
       <!-- name type light water humidity soil fertilizer toxcicity notes -->
+  <!-- </form>
+  </div>  -->
+  <div
+    class="card"
+    style="width: 500px; padding: 10px; display: flex; justify-content: left"
+  >
+    <form action="/your-name/" method="post">
+      {% csrf_token %} {{ form.as_p }}
+      <input type="submit" value="Submit" />
     </form>
   </div>
 </section>
-<div
-  class="card"
-  style="width: 500px; padding: 10px; display: flex; justify-content: left"
->
-  <form action="/your-name/" method="post">
-    {% csrf_token %} {{ form.as_p }}
-    <input type="submit" value="Submit" />
-  </form>
-</div>
 {% endblock %}
