finally connecting the dots!

--- a/blossom/myapp/templates/new_plant.html
+++ b/blossom/myapp/templates/new_plant.html
@@ -86,7 +86,7 @@
         value="{{ current_notes }}"
         style="margin: 2px"
       />
-      <label for="toxcicity">Toxcicity: </label>
+      <label for="v">Toxcicity: </label>
       <input type="checkbox" id="toxcicity" name="toxcicity" value="Bike" />
       <label for="notes">Additional Notes: </label>
       <input
