stargint to connecform

--- a/blossom/myapp/templates/new_plant.html
+++ b/blossom/myapp/templates/new_plant.html
@@ -104,7 +104,7 @@
     class="card"
     style="width: 500px; padding: 10px; display: flex; justify-content: left"
   >
-    <form action="/your-name/" method="post">
+    <form action="/create/" method="post">
       {% csrf_token %} {{ form.as_p }}
       <input type="submit" value="Submit" />
     </form>
