--- a/blossom/myapp/templates/plants.html
+++ b/blossom/myapp/templates/plants.html
@@ -1,4 +1,7 @@
-{% extends 'base.html' %} {% block content %} {% for x in plants %}
+{% extends 'base.html' %} {% block content %}
+
+<!-- 
+{% for x in plants %}
 <div class="card" style="width: 18rem; padding: 10px">
   <p>{{ x.name }}</p>
   <p>{{ x.type }}</p>
@@ -7,13 +10,17 @@
 </div>
 <br />
 {% endfor %} {% for x in full_plant %}
+ -->
+
 <div class="card" style="width: 18rem; padding: 10px">
   <p>This is {{ x.name }}</p>
   <p>{{ x.name }} is a {{ x.type }}</p>
   <p>Brightness: {{ x.light }}</p>
+  <p>Water: {{ x.water }}</p>
   <p>How Humid? {{ x.humidity }}</p>
   <p>Toxic? {{ x.toxcicity }}</p>
   <p>Water amount: {{ x.water }}</p>
+  <p>Fertilizer: {{ x.fertilizer }}</p>
   <p>{{ x.notes }}</p>
 </div>
 <br />
