--- a/blossom/myapp/templates/book_details.html
+++ b/blossom/myapp/templates/book_details.html
@@ -1,1 +1,4 @@
-{% extends 'base.html' %} {% block content %} {% endblock %}
+{% extends 'base.html' %} {% block content %}
+<p>This is the place to put books about plants.</p>
+
+{% endblock %}
